--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+		<!--installing google fonts  -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap"
+			rel="stylesheet" />
 		<title>React App</title>
 	</head>
 	<body>
